--- a/.github/workflows/pulumi-2.yaml
+++ b/.github/workflows/pulumi-2.yaml
@@ -30,6 +30,7 @@ jobs:
           PULUMI_ACCESS_TOKEN: ${{ secrets.pulumi-access-token }}
           CIVO_TOKEN: ${{ secrets.civo-token }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COMMENT_ON_PR: true
       - uses: pulumi/actions@06bc93fb6890a1d5bc8e4fab9a2354389011666b # v3.20.0
         if: false
         with:
