--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,10 +9,18 @@ on:
       - '**/.github/'
 
 jobs:
-  call-pulumi-workflow:
-    uses: ./.github/workflows/pulumi-2.yaml
-    with:
-      stack-name: dev
-    secrets:
-      pulumi-access-token: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-      civo-token: ${{ secrets.CIVO_TOKEN }}
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+     - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
+     - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f # v3.3.1
+       with:
+        go-version: 1.19
+     - run: go mod download
+     - run: go run .
+       env:
+         PULUMI_ACCESS_TOKEN: ${{ secrets.pPULUMI_ACCESS_TOKEN }}
+         CIVO_TOKEN: ${{ secrets.CIVO_TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         COMMENT_ON_PR: true
