--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
      - run: go mod download
      - run: go run .
        env:
-         PULUMI_ACCESS_TOKEN: ${{ secrets.pPULUMI_ACCESS_TOKEN }}
+         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
          CIVO_TOKEN: ${{ secrets.CIVO_TOKEN }}
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          COMMENT_ON_PR: true
