--- a/.github/workflows/pulumi.yaml
+++ b/.github/workflows/pulumi.yaml
@@ -22,34 +22,12 @@ jobs:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
       - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f # v3.3.1
         with:
-          go-version: 1.17
+          go-version: 1.19
       - run: go mod download
-      - uses: pulumi/actions@06bc93fb6890a1d5bc8e4fab9a2354389011666b # v3.20.0
-        with:
-          command: preview
-          stack-name: dev
-          comment-on-pr: true
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - run: go run .
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.pulumi-access-token }}
           CIVO_TOKEN: ${{ secrets.civo-token }}
-  up:
-    name: Up
-    runs-on: ubuntu-latest
-    needs:
-      - preview
-    if: success() && startsWith(github.ref, 'refs/tags/')
-    steps:
-      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v3.1.0
-      - uses: actions/setup-go@c4a742cab115ed795e34d4513e2cf7d472deb55f # v3.3.1
-        with:
-          go-version: 1.17
-      - run: go mod download
-      - uses: pulumi/actions@06bc93fb6890a1d5bc8e4fab9a2354389011666b # v3.20.0
-        with:
-          command: up
-          stack-name: dev
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-          CIVO_TOKEN: ${{ secrets.CIVO_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COMMENT_ON_PR: true
+
