feat: testing around!

--- a/.github/workflows/pulumi.yaml
+++ b/.github/workflows/pulumi.yaml
@@ -1,10 +1,19 @@
-name: Pulumi
+name: Reusable Pulumi Workflow
 
 on:
-  push:
-    tags:
-      - 'x.y.z'
-
+  workflow_call:
+    inputs:
+      stack-name:
+        description: 'The name of the stack to operate on'
+        required: true
+        type: string
+    secrets:
+      pulumi-access-token:
+        description: 'The Pulumi access token to use'
+        required: true
+      civo-token:
+        description: 'The Civo token to use'
+        required: true
 jobs:
   preview:
     name: Preview
